// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rander ExpenseSummary with 1 expense totalling $1.95 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
      <span>
         
        1
      </span>
       expense 
      totalling
      <span>
         
        $1.95
      </span>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;

exports[`should render ExpenseSummary with 0 expenses totalling $0.00 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing
      <span>
         
        0
      </span>
       expenses 
      totalling
      <span>
         
        $0.00
      </span>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </h1>
  </div>
</div>
`;
